[package]
name = "conclave-server-rs"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "conclave server"
repository = "https://github.com/piot/conclave-server-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
stderrlog = "0.5.4"
